# tap-story

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  app.json  devenv.nix  entities.json  mempalace.yaml  package-lock.json  package.json  render.yaml
backend/: .env.example  jest.config.js  package.json  tsconfig.json
backend/prisma/: schema.prisma  seed.ts
backend/src/: server.ts
docs/: AUDIO_SYNC_ISSUE.md  README.md  architecture.md  backend.md  infrastructure.md  mobile.md  services.md
docs/features/: audio-download-loading-states.md
docs/plans/: 2024-11-23-project-structure-plan.md  2024-11-24-mvp-audio-recording-duet-PROGRESS.md  2024-11-24-mvp-audio-recording-duet.md  2025-11-25-audio-download-loading-states.md  2026-07-12-fixes-applied.md  2026-07-12-investigation-findings.md  2026-07-12-reliable-audio-sync.md  INITIAL_OVERALL_PLAN.md  PROOF_OF_CONCEPT.md
mobile/: .gitignore  app.config.js  app.json  eas.json  jest.config.js  jest.setup.js  package.json  tsconfig.json
mobile/android/: settings.gradle
mobile/android/app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  native-lib.cpp
mobile/android/app/src/main/cpp/audio/: PunchCapture.h  SpscPcmRing.h
mobile/app/: _layout.tsx  index.tsx
mobile/components/: AppButton.tsx  AudioTimeline.tsx  CassettePlayerControls.tsx  DuetRecorder.tsx  DuetRecorderWithTrackPlayer.tsx  LatencyNudge.tsx  RecordButton.tsx  SavedChainsList.tsx  audioInteractionState.ts
mobile/ios/: Podfile
patches/: react-native-track-player+4.1.2.patch
shared/: jest.config.js  package.json  tsconfig.json
(+73 files in other folders)
